--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,5 @@
-
 header {
-  width: 100%;
+    width: 100%;
 }
 
 .canvas-container {
@@ -9,16 +8,16 @@ header {
     // background: linear-gradient(to top, #000046 50%, #8E2DE2 100%);
     // background: linear-gradient(to top, #07005d 20%, #fc4d4e 100%);
     // background-image: linear-gradient(137.86deg, #07005d, rgb(91, 12, 143) 43.75%, rgb(252, 77, 106));
-  background-image: url('/header-bg-mac.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed; 
+    background-image: url('/header-bg-mac.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     height: 100%;
     width: 100%;
-  }
+}
 
-  .header-bg-bottom {
+.header-bg-bottom {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -26,30 +25,30 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed; 
+    background-attachment: fixed;
     height: 100%;
     width: 100%;
     z-index: 2;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: "Montserrat Bold";
     src: url("../../static/Montserrat-Bold.ttf")
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: "Montserrat Regular";
     src: url("../../static/Montserrat-Regular.ttf")
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: "Montserrat Light";
     src: url("../../static/Montserrat-Light.ttf")
-  }
+}
 
-   
 
-  .canvas-text {
+
+.canvas-text {
     position: absolute;
     top: 0;
     left: 0;
@@ -61,54 +60,68 @@ header {
     flex-direction: column;
     color: white;
     z-index: 1;
-    animation: fade-in 2s steps(300);
+    animation: fade-in 2.5s steps(300);
+
     h1 {
-      font-family: "Montserrat Bold";
-      font-size: 80px;
-      text-align: center;
-      line-height: 0.9;
-      letter-spacing: 1px;
-      margin-bottom: 30px;
-      text-shadow: 2px 2px 8px #0F0023;
+        font-family: "Montserrat Bold";
+        font-size: 80px;
+        text-align: center;
+        line-height: 0.9;
+        letter-spacing: 1px;
+        margin-bottom: 30px;
+        text-shadow: 2px 2px 8px #0F0023;
     }
-    h2, p {  
-      margin-bottom: 0;
-      text-align: center;
-      text-align: center;
-      letter-spacing: 1px;
-      font-weight: 400;
-    }
-    h2 {
-      color: #d83434;
-      margin-bottom: 30px;
-      font-family: "Montserrat Regular";
-      font-weight: 600;
-      font-size: 19px;    
-      text-shadow: 2px 2px 8px #0F0023;
-      letter-spacing: 1.5px;
-    }
-    h2::after {
-      content: "<FRONT-END DEVELOPER/>";
-      margin-bottom: 25px;
-    }
+
+    h2,
     p {
-      margin-bottom: 50px;
-      font-family: "Montserrat Light";
-      font-size: 25px;
-      color: #fff;
-      text-shadow: 2px 2px 8px #0F0023;
+        margin-bottom: 0;
+        text-align: center;
+        text-align: center;
+        letter-spacing: 1px;
+        font-weight: 400;
     }
-  }
 
-  @keyframes fade-in {
-    0%   {opacity: 0; transform: translateY(330px);}
-    25%  {opacity: 0}
-    50%  {opacity: 0.1}
-    100% {opacity: 1; 
-          transform: translateY(0px);}
-  }
+    h2 {
+        color: #d83434;
+        margin-bottom: 30px;
+        font-family: "Montserrat Regular";
+        font-weight: 600;
+        font-size: 19px;
+        text-shadow: 2px 2px 8px #0F0023;
+        letter-spacing: 1.5px;
+    }
 
-  .scroll-down {
+    p {
+        margin-bottom: 50px;
+        font-family: "Montserrat Light";
+        font-size: 25px;
+        color: #fff;
+        text-shadow: 2px 2px 8px #0F0023;
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+        transform: translateY(330px);
+    }
+
+    25% {
+        opacity: 0;
+        transform: translateY(330px);
+    }
+
+    50% {
+        opacity: 0.1
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+.scroll-down {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -119,214 +132,243 @@ header {
     margin-bottom: 0;
     font-family: "Montserrat Regular";
     font-weight: 400;
-    font-size: 17px;   
+    font-size: 17px;
     color: #fff;
     text-shadow: 2px 2px 8px #0F0023;
     z-index: 10;
     text-decoration: none;
     cursor: pointer;
+
     p {
-      width: 100%;
-      text-align: center;
+        width: 100%;
+        text-align: center;
     }
+
     img {
-      max-width: 35px;
-      animation: infinite;
-      animation-duration: 2s;
-      animation-name: bounce;
-      -webkit-transform-origin: center bottom;
-      transform-origin: center bottom;
-      text-shadow: 2px 2px 8px #0F0023;
+        max-width: 35px;
+        animation: infinite;
+        animation-duration: 2s;
+        animation-name: bounce;
+        -webkit-transform-origin: center bottom;
+        transform-origin: center bottom;
+        text-shadow: 2px 2px 8px #0F0023;
     }
-  }
-  .scroll-img-container {
+}
+
+.scroll-img-container {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-  }
+}
 
-  @keyframes bounce {
+@keyframes bounce {
+
     from,
     20%,
     53%,
     80%,
     to {
-      -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
+        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
     }
-  
+
     40%,
     43% {
-      -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-      -webkit-transform: translate3d(0, -30px, 0);
-      transform: translate3d(0, -30px, 0);
+        -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        -webkit-transform: translate3d(0, -30px, 0);
+        transform: translate3d(0, -30px, 0);
     }
-  
+
     70% {
-      -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-      -webkit-transform: translate3d(0, -15px, 0);
-      transform: translate3d(0, -15px, 0);
+        -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        -webkit-transform: translate3d(0, -15px, 0);
+        transform: translate3d(0, -15px, 0);
     }
-  
+
     90% {
-      -webkit-transform: translate3d(0, -4px, 0);
-      transform: translate3d(0, -4px, 0);
+        -webkit-transform: translate3d(0, -4px, 0);
+        transform: translate3d(0, -4px, 0);
     }
-  }
+}
 
-  #stars {
-      display: block;
-      position: relative;
-      width: 100%;
-      height: 16rem;
-      height: 100vh;
-      z-index: 1;
-  } 
-  
+#stars {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 16rem;
+    height: 100vh;
+    z-index: 1;
+}
 
 
-  // Extra small devices (portrait phones, less than 576px)
-@media (max-width: 575.98px) { 
-  .canvas-text {
-    h1 {
-      font-size: 43px;
-      margin-bottom: 25px;
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+    .canvas-text {
+        h1 {
+            font-size: 43px;
+            margin-bottom: 25px;
+        }
+
+        h2 {
+            font-size: 14px;
+            margin-bottom: 25px;
+        }
+
+        p {
+            font-size: 17px;
+            width: 90%;
+        }
     }
-    h2 {
-      font-size: 14px;
-      margin-bottom: 25px;
+
+    .scroll-down {
+        font-size: 13px;
     }
-    p {
-      font-size: 17px;
-      width: 90%;
+
+    .scroll-img-container {
+        margin-top: 13px;
+
+        img {
+            max-width: 22px;
+        }
     }
-  }
-  .scroll-down {
-    font-size: 13px;
-  }
-  .scroll-img-container {
-    margin-top: 13px;
-    img {
-      max-width: 22px;
-    }
-  }
- }
+}
 
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) and (max-width: 767.98px) {
-  .canvas-text {
-    h1 {
-      font-size: 37px;
-      margin-bottom: 20px;
+    .canvas-text {
+        h1 {
+            font-size: 37px;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            font-size: 14px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            width: 50%;
+        }
     }
-    h2 {
-      font-size: 14px;
-      margin-bottom: 20px;
+
+    .scroll-down {
+        font-size: 13px;
     }
-    p {
-      font-size: 18px;
-      width: 50%;
+
+    .scroll-img-container {
+        margin-top: 13px;
+
+        img {
+            max-width: 22px;
+        }
     }
-  }
-  .scroll-down {
-    font-size: 13px;
-  }
-  .scroll-img-container {
-    margin-top: 13px;
-    img {
-      max-width: 22px;
-    }
-  }
- }
+}
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) and (max-width: 991.98px) { 
-  .canvas-text {
-    h1 {
-      font-size: 65px;
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .canvas-text {
+        h1 {
+            font-size: 65px;
+        }
+
+        h2 {
+            font-size: 17px;
+        }
+
+        p {
+            font-size: 18px;
+        }
     }
-    h2 {
-      font-size: 17px;
+
+    .scroll-down {
+        font-size: 15px;
     }
-    p {
-      font-size: 18px;
+
+    .scroll-img-container {
+        margin-top: 15px;
+
+        img {
+            max-width: 27px;
+        }
     }
-  }
-  .scroll-down {
-    font-size: 15px;
-  }
-  .scroll-img-container {
-    margin-top: 15px;
-    img {
-      max-width: 27px;
-    }
-  }
- }
+}
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) and (max-width: 1199.98px) { 
-  .canvas-text {
-    h1 {
-      font-size: 75px;
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .canvas-text {
+        h1 {
+            font-size: 75px;
+        }
+
+        h2 {
+            font-size: 18px;
+        }
+
+        p {
+            font-size: 22px;
+        }
     }
-    h2 {
-      font-size: 18px;
+
+    .scroll-down {
+        font-size: 16px;
     }
-    p {
-      font-size: 22px;
+
+    .scroll-img-container {
+        margin-top: 15px;
+
+        img {
+            max-width: 30px;
+        }
     }
-  }
-  .scroll-down {
-    font-size: 16px;
-  }
-  .scroll-img-container {
-    margin-top: 15px;
-    img {
-      max-width: 30px;
-    }
-  }
- }
+}
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) and (max-width: 1500px) { 
+@media (min-width: 1200px) and (max-width: 1500px) {
     .canvas-text {
-      height: 64%;
+        height: 64%;
     }
-  }
+}
 
 
 
 
 
-  @media (min-width: 1px) and (max-width: 850px) and (orientation: landscape) {
+@media (min-width: 1px) and (max-width: 850px) and (orientation: landscape) {
     .canvas-text {
-      h1 {
-        font-size: 40px;
-        margin-bottom: 20px;
-      }
-      h2 {
-        font-size: 13px;
-        margin-bottom: 20px;
-      }
-      p {
-        font-size: 15px;
-        width: 90%;
-      }
+        h1 {
+            font-size: 40px;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            font-size: 13px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 15px;
+            width: 90%;
+        }
     }
+
     .scroll-down {
-      font-size: 13px;
+        font-size: 13px;
     }
+
     .scroll-img-container {
-      margin-top: 10px;
-      img {
-        max-width: 20px;
-      }
+        margin-top: 10px;
+
+        img {
+            max-width: 20px;
+        }
     }
-   }
+}
