--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,3 +52,38 @@ main {
 body {
     color: #131313 !important;
 }
+
+.link-home {
+    text-transform: uppercase;
+    font-family: "Montserrat Regular";
+    font-weight: 600;
+    font-size: 13px;
+    text-align: center;
+    color: #fff;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: 0;
+    text-decoration: none;
+    background-color: #d83434;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    letter-spacing: 1px;
+    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    display: block;
+    max-width: 300px;
+    cursor: pointer;
+    z-index: 20;
+}
+
+.link-home:hover {
+    transform: translateX(15px);
+    background-color: #ff3535;
+    cursor: pointer;
+}
+
+.error-site {
+    .canvas-text {
+        animation: none;
+    }
+}
