fixed bug with typed.js loading

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -22,7 +22,7 @@
         list-style-type: none;
         margin: 0;
         margin-top: 10px;
-
+        cursor: pointer;
         li {
             width: 100%;
             text-align: center;
