--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,17 @@
+
+.loader-content {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/header-bg-mac-min.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 header {
     width: 100%;
     height: 100vh;
