--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -228,6 +228,13 @@
     }
 }
 
+.loader-content {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
