--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,6 +10,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 header {
