--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-image: url('../images/header-bg-mac-min.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    background-image: none;
 }
 
 @import "./header.scss";
